--- a/ui/host.ui
+++ b/ui/host.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.15.4 on Fri Sep 27 14:12:46 2013 -->
+<!-- Generated with glade 3.16.0 on Sun Sep 29 11:40:23 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
@@ -715,7 +715,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">DNS Domain:</property>
+                                        <property name="label" translatable="yes">Domain:</property>
                                         <property name="use_markup">True</property>
                                       </object>
                                       <packing>
@@ -726,18 +726,29 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkLabel" id="net-name">
+                                      <object class="GtkLabel" id="label5">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
-                                        <property name="label">&lt;b&gt;Name&lt;/b&gt;</property>
-                                        <property name="use_markup">True</property>
-                                        <property name="selectable">True</property>
+                                        <property name="label" translatable="yes">Name:</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
                                         <property name="top_attach">0</property>
-                                        <property name="width">2</property>
+                                        <property name="width">1</property>
+                                        <property name="height">1</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkEntry" id="net-name">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <signal name="changed" handler="on_net_name_changed" swapped="no"/>
+                                      </object>
+                                      <packing>
+                                        <property name="left_attach">1</property>
+                                        <property name="top_attach">0</property>
+                                        <property name="width">1</property>
                                         <property name="height">1</property>
                                       </packing>
                                     </child>
