--- a/ui/details.ui
+++ b/ui/details.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Sat Sep 28 14:18:18 2013 -->
+<!-- Generated with glade 3.16.0 on Mon Sep 30 15:08:28 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
@@ -393,7 +393,7 @@
                     <property name="can_focus">False</property>
                     <property name="tooltip_text" translatable="yes">Manage VM snapshots</property>
                     <property name="label" translatable="yes">Snapshots</property>
-                    <property name="icon_name">vm_new</property>
+                    <property name="icon_name">vm_clone_wizard</property>
                     <property name="group">control-vm-console</property>
                     <signal name="toggled" handler="on_control_snapshots_toggled" swapped="no"/>
                   </object>
