--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Mon Sep 30 14:37:24 2013 -->
+<!-- Generated with glade 3.16.0 on Mon Sep 30 16:01:38 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.6 -->
-  <object class="GtkImage" id="image2">
+  <object class="GtkImage" id="image3">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="stock">gtk-new</property>
@@ -95,7 +95,9 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Name:</property>
+                    <property name="label" translatable="yes">_Name:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">snapshot-new-name</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -109,6 +111,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="invisible_char">●</property>
+                    <signal name="changed" handler="on_snapshot_new_name_changed" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -123,7 +126,9 @@
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
                     <property name="yalign">0</property>
-                    <property name="label" translatable="yes">Description:</property>
+                    <property name="label" translatable="yes">_Description:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">snapshot-new-description</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -183,11 +188,11 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="snapshot-new-ok">
-                    <property name="label" translatable="yes">Finish</property>
+                    <property name="label" translatable="yes">_Finish</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="image">image2</property>
+                    <property name="image">image3</property>
                     <property name="use_underline">True</property>
                     <signal name="clicked" handler="on_snapshot_new_ok_clicked" swapped="no"/>
                   </object>
@@ -397,7 +402,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="xalign">0</property>
-                                <property name="label">&lt;b&gt;snapshot 'foo' (current)&lt;/b&gt;</property>
+                                <property name="label">&lt;b&gt;snapshot 'foo'&lt;/b&gt;</property>
                                 <property name="use_markup">True</property>
                               </object>
                               <packing>
