--- a/ui/createvol.ui
+++ b/ui/createvol.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Mon Sep 30 14:03:36 2013 -->
+<!-- Generated with glade 3.16.0 on Tue Oct  1 14:33:00 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="adjustment1">
@@ -179,6 +179,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">start</property>
+                                <signal name="changed" handler="on_vol_format_changed" swapped="no"/>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
