--- a/ui/snapshots.ui
+++ b/ui/snapshots.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Tue Oct  1 09:37:34 2013 -->
+<!-- Generated with glade 3.16.0 on Fri Oct  4 16:54:34 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.6 -->
   <object class="GtkImage" id="image3">
@@ -215,6 +215,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
+                    <property name="yalign">0</property>
                     <property name="label" translatable="yes">Screenshot:</property>
                   </object>
                   <packing>
